--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,6 @@
 [submodule "external/Visual_Speech_Recognition_for_Multiple_Languages"]
 	path = external/Visual_Speech_Recognition_for_Multiple_Languages
 	url = https://github.com/filby89/Visual_Speech_Recognition_for_Multiple_Languages.git
-[submodule "external/external/face_detection"]
-	path = external/external/face_detection
-	url = https://github.com/hhj1897/face_detection
-[submodule "external/face_detection"]
-	path = external/face_detection
-	url = https://github.com/hhj1897/face_detection
+[submodule "external/av_hubert"]
+	path = external/av_hubert
+	url = https://github.com/facebookresearch/av_hubert
