add correct submodule link

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "external/face_detection"]
 	path = external/face_detection
 	url = https://github.com/hhj1897/face_detection
+[submodule "external/Visual_Speech_Recognition_for_Multiple_Languages"]
+	path = external/Visual_Speech_Recognition_for_Multiple_Languages
+	url = https://github.com/mpc001/Visual_Speech_Recognition_for_Multiple_Languages
